--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ds-chat",
+  "name": "ds-chat-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
@@ -50,5 +51,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^10.4.0"
-  }
+  },
+  "license": "MIT",
+  "proxy": "http://localhost:5000/"
 }
